# circe

./: ReadMe.md  pyproject.toml
.github/workflows/: ci.yml
src/bmi/: bmi.py  main.py
tests/: test_bmi.py
