[project]
name = "bmi-project"
version = "0.1.0"
description = "Just a Python script project to compute the Body Mass Index with tests and tools."
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true