[project]
name = "bmi-project"
version = "0.1.0"
description = "Python script project to compute the Body Mass Index."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[project.scripts]
bmitool = "bmi.main:main"
